@@ -192,6 +192,7 @@ All (GUI):
 - Add support for reading alpha data from TIFF images
 - Added wxSYS_DCLICK_TIME system metric constant (Arne Steinarson)
 - Added wxApp::Get/SetAppDisplayName() (Brian A. Vanderburg II)
+- Added wxWindow::GetPopupMenuSelectionFromUser() (Arne Steinarson)
 
 wxGTK:
 
